BPER/DEVF/force-app/main/default/objects/Nucleo__c/Nucleo__c.object-meta.xml
<CustomObject>
    <label>Nucleo</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Nucleo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nucleo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>