BPER/DEVF/force-app/main/default/objects/Nucleo__c/fields/PTF_CodeImport__c.field-meta.xml
<CustomField>
    <fullName>PTF_CodeImport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CodeImport</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>