BPER/DEVF/force-app/main/default/objects/Nucleo__c/fields/PTF_CodId__c.field-meta.xml
<CustomField>
    <fullName>PTF_CodId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cod Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>