BPER/DEVF/force-app/main/default/objects/Nucleo__c/fields/PTF_DataCancellazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_DataCancellazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data cancellazione</label>
    <type>Date</type>
</CustomField>